ml-models/v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-object-detector
  namespace: ml-model
  labels:
    app: yolo-object-detector
spec:
  selector:
    matchLabels:
      app: yolo-object-detector
  replicas: 1
  template:
    metadata:
      labels:
        app: yolo-object-detector
    spec:
      containers:
      - name: yolo-object-detector
        image: quay.io/langley_millard_ibm/ml-model-v2
        ports:
        - containerPort: 8000
