ml-models/v2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-object-detector
  namespace: ml-model
spec:
  selector:
    app: yolo-object-detector
  ports:
  - port: 8000
  type: NodePort
