ml-models/v2/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: yolo-object-detector
  namespace: ml-model
spec:
  to:
    kind: Service
    name: yolo-object-detector
    weight: 100
  port:
    targetPort: 8000
  wildcardPolicy: None
